feat: add health check endpoints (#21)
* feat: add health check endpoints

* docs: run swag generate command
